--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,7 +1,10 @@
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>{{ page.title | default: site.title }}</title>
-  <link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}" />
-  <link rel="icon" href="{{ '/favicon.png' | relative_url }}">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Lab Escape - The Escape room</title>
+    <link
+        rel="stylesheet"
+        href="{{ '/assets/css/style.css' | relative_url }}"
+    />
+    <link rel="icon" href="{{ '/favicon.png' | relative_url }}" />
 </head>
