--- a/_includes/reservation.html
+++ b/_includes/reservation.html
@@ -4,7 +4,7 @@
     src="https://static.zcal.co/embed/v1/embed.js"
 ></script>
 <div class="zcal-inline-widget">
-    <a href="https://zcal.co/i/BpVraImb"
-        >Lab Escape - Escape Room - Reservation</a
-    >
+    <a href="https://zcal.co/i/BpVraImb">
+        Lab Escape - Escape Room - Reservation
+    </a>
 </div>
